--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "web:dev": "turbo run dev --filter=web",
+    "web:build": "turbo run build --filter=web"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
