--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,10 +8,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
     "@saas-foundations/ui": "workspace:*",
+    "@types/mdx": "^2.0.13",
+    "fumadocs-core": "^15.0.15",
+    "fumadocs-mdx": "^11.5.6",
+    "fumadocs-ui": "^15.0.15",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
