--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@saas-foundations/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/mdx": "^2.0.13",
     "fumadocs-core": "^15.0.15",
     "fumadocs-mdx": "^11.5.6",
     "fumadocs-ui": "^15.0.15",
     "next": "^15.2.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
     "@saas-foundations/eslint-config": "workspace:*",
