--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,13 +5,17 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "@/.source": ["./.source/index.ts"],
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     "next-env.d.ts",
-    "next.config.js",
+    "next.config.mjs",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
