--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@saas-foundations/ui": "workspace:*",
+    "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4.0.13",
     "@types/mdx": "^2.0.13",
     "fumadocs-core": "^15.0.15",
