Adds slug to blog posts and updates scripts
Adds a slug field to the blog post schema to improve URL structure and SEO.
Removes meta-scan script from layout.
Adds a start script to package.json and turbo.json.
Deletes test blog post.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "web:dev": "turbo run dev --filter=web",
-    "web:build": "turbo run build --filter=web"
+    "web:build": "turbo run build --filter=web",
+    "web:start": "turbo run start --filter=web"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
