fix: cleanup build

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "check-types": "turbo run check-types",
     "web:dev": "turbo run dev --filter=web",
     "web:build": "turbo run build --filter=web",
-    "web:start": "turbo run start --filter=web"
+    "web:start": "turbo run start --filter=web",
+    "oss:dev": "turbo run dev --filter=oss",
+    "oss:build": "turbo run build --filter=oss",
+    "oss:start": "turbo run start --filter=oss"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
