install fuma in oss

--- a/apps/oss/package.json
+++ b/apps/oss/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@saas-foundations/eslint-config": "workspace:*",
+    "@saas-foundations/typescript-config": "workspace:*",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
