--- a/apps/oss/tsconfig.json
+++ b/apps/oss/tsconfig.json
@@ -1,37 +1,28 @@
 {
+  "extends": "@saas-foundations/typescript-config/nextjs.json",
   "compilerOptions": {
-    "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
+    "declaration": false,
+    "declarationMap": false,
     "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
+      "@/.source": [
+        "./.source/index.ts"
+      ],
       "@/*": [
-        "./src/*"
+        "./*"
       ]
     }
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "next-env.d.ts",
+    "next.config.mjs",
     ".next/types/**/*.ts"
   ],
   "exclude": [
