--- a/apps/oss/package.json
+++ b/apps/oss/package.json
@@ -1,34 +1,38 @@
 {
   "name": "oss",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --max-warnings 0",
+    "check-types": "tsc --noEmit",
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@saas-foundations/ui": "workspace:*",
+    "@standard-schema/spec": "^1.0.0",
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/mdx": "^2.0.13",
     "fumadocs-core": "^15.0.15",
     "fumadocs-mdx": "^11.5.6",
     "fumadocs-ui": "^15.0.15",
-    "next": "15.2.2",
+    "next": "^15.2.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.13",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@saas-foundations/eslint-config": "workspace:*",
     "@saas-foundations/typescript-config": "workspace:*",
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^22.13.9",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "eslint": "^9.22.0",
+    "typescript": "5.8.2"
   }
 }
