feat: Update Next.js configuration for OSS app
- Modified next.config.mjs to support new feature requirements
- Added necessary environment variables for production deployment
- Updated build optimization settings

--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "exports": {
     "./source": "./src/source.ts",
+    "./search": "./src/search.ts",
     "./docs/page": "./src/docs/page.tsx",
     "./docs/layout": "./src/docs/layout.tsx"
   },
