--- a/apps/oss/package.json
+++ b/apps/oss/package.json
@@ -15,11 +15,16 @@
     "@saas-foundations/cms": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4.0.13",
+    "@types/mdx": "^2.0.13",
+    "fumadocs-core": "^15.0.15",
+    "fumadocs-mdx": "^11.5.6",
+    "fumadocs-ui": "^15.0.15",
     "next": "^15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.13"
+    "tailwindcss": "^4.0.13",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@saas-foundations/eslint-config": "workspace:*",
