feat: Introduce static and dynamic configurations for OSS
- Added new scripts in package.json for oss-static operations
- Created new files for static and dynamic search configurations
- Deleted obsolete search.ts and oss-web package.json
- Updated CMS package exports to include search-static and search-dynamic
- Established new file structure for oss-static and oss-dynamic configurations

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "web:start": "turbo run start --filter=web",
     "oss-dynamic:dev": "turbo run dev --filter=oss-dynamic",
     "oss-dynamic:build": "turbo run build --filter=oss-dynamic",
-    "oss-dynamic:start": "turbo run start --filter=oss-dynamic"
+    "oss-dynamic:start": "turbo run start --filter=oss-dynamic",
+    "oss-static:dev": "turbo run dev --filter=oss-static",
+    "oss-static:build": "turbo run build --filter=oss-static",
+    "oss-static:start": "turbo run start --filter=oss-static"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
