--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "exports": {
     "./source": "./src/source.ts",
-    "./search": "./src/search.ts",
+    "./search-dynamic": "./src/search-dynamic.ts",
+    "./search-static": "./src/search-static.ts",
     "./docs/page": "./src/docs/page.tsx",
     "./docs/layout": "./src/docs/layout.tsx"
   },
