refactor: Update content paths and dependencies
- Changed content directory paths in source.config.ts and globals.css files
- Added @saas-foundations/ui as a dependency in cms package.json
- Updated import paths in index.mdx for Button component
- Created source.config.ts in cms package for configuration management

--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -26,6 +26,7 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@saas-foundations/ui": "workspace:*",
     "@types/mdx": "^2.0.13",
     "fumadocs-core": "^15.0.15",
     "fumadocs-mdx": "^11.5.6",
