chore: Add clean scripts and update turbo configuration
- Added `clean` script to package.json files across multiple packages and apps to remove node_modules
- Updated turbo.json to include clean task configuration
- Created package.json for oss-dynamic app with initial setup

--- a/apps/oss-dynamic/package.json
+++ b/apps/oss-dynamic/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "clean": "rm -rf node_modules",
     "dev": "next dev --turbopack --port 3000",
     "build": "next build",
     "start": "next start",
