--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "saas-foundations",
   "private": true,
   "scripts": {
+    "clean": "turbo clean && git clean -xdf node_modules",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
