--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,8 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
