--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,14 +12,14 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@saas-foundations/ui": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@saas-foundations/eslint-config": "workspace:*",
-    "@saas-foundations/typescript-config": "workspace:*",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
