--- a/apps/oss-dynamic/package.json
+++ b/apps/oss-dynamic/package.json
@@ -12,8 +12,9 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@saas-foundations/ui": "workspace:*",
-    "@saas-foundations/cms": "workspace:*",
+    "@workspace/ui": "workspace:*",
+    "@foundations/cms": "workspace:*",
+    "@foundations/shadcn": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4.0.13",
     "@types/mdx": "^2.0.13",
@@ -28,8 +29,8 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@saas-foundations/eslint-config": "workspace:*",
-    "@saas-foundations/typescript-config": "workspace:*",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
