--- a/foundations/cms/package.json
+++ b/foundations/cms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@saas-foundations/cms",
+  "name": "@foundations/cms",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -17,8 +17,8 @@
     "postinstall": "fumadocs-mdx"
   },
   "devDependencies": {
-    "@saas-foundations/eslint-config": "workspace:*",
-    "@saas-foundations/typescript-config": "workspace:*",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
@@ -27,7 +27,7 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
-    "@saas-foundations/ui": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "@types/mdx": "^2.0.13",
     "fumadocs-core": "^15.0.15",
     "fumadocs-mdx": "^11.5.6",
