--- a/workspace/content/package.json
+++ b/workspace/content/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "@saas-foundations/ui",
+  "name": "@workspace/content",
   "version": "0.0.0",
   "private": true,
-  "exports": {
-    "./*": "./src/*.tsx"
-  },
+  "type": "module",
   "scripts": {
     "clean": "rm -rf node_modules",
     "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@saas-foundations/eslint-config": "workspace:*",
-    "@saas-foundations/typescript-config": "workspace:*",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
@@ -22,8 +19,12 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
+    "@workspace/ui": "workspace:*",
+    "@types/mdx": "^2.0.13",
+    "fumadocs-core": "^15.0.15",
+    "fumadocs-mdx": "^11.5.6",
+    "fumadocs-ui": "^15.0.15",
+    "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
