--- a/workspace/ui/package.json
+++ b/workspace/ui/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "content",
+  "name": "@workspace/ui",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
+  "exports": {
+    "./*": "./src/*.tsx"
+  },
   "scripts": {
     "clean": "rm -rf node_modules",
     "lint": "eslint . --max-warnings 0",
+    "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@saas-foundations/eslint-config": "workspace:*",
-    "@saas-foundations/typescript-config": "workspace:*",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
@@ -19,12 +22,8 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
-    "@saas-foundations/ui": "workspace:*",
-    "@types/mdx": "^2.0.13",
-    "fumadocs-core": "^15.0.15",
-    "fumadocs-mdx": "^11.5.6",
-    "fumadocs-ui": "^15.0.15",
-    "next": "^15.2.1",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
