feat: Integrate ShadCN components and update styles
- Added ShadCN components to `hero.tsx` in the UI workspace.
- Updated `globals.css` in `oss-dynamic` to include ShadCN styles.
- Modified `package.json` in CMS and UI workspaces to include ShadCN as a dependency.
- Commented out TailwindCSS import in ShadCN's `globals.css`.
- Updated `pnpm-lock.yaml` to reflect new dependencies and changes.

--- a/foundations/cms/package.json
+++ b/foundations/cms/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "exports": {
+    "./globals.css": "./src/styles/globals.css",
     "./source": "./src/source.ts",
     "./search-dynamic": "./src/search-dynamic.ts",
     "./search-static": "./src/search-static.ts",
