--- a/workspace/ui/package.json
+++ b/workspace/ui/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
+    "@foundations/shadcn": "workspace:*",
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
