--- a/apps/oss-dynamic/package.json
+++ b/apps/oss-dynamic/package.json
@@ -12,12 +12,12 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@workspace/ui": "workspace:*",
     "@foundations/cms": "workspace:*",
     "@foundations/shadcn": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4.0.13",
     "@types/mdx": "^2.0.13",
+    "@workspace/ui": "workspace:*",
     "fumadocs-core": "^15.0.15",
     "fumadocs-mdx": "^11.5.6",
     "fumadocs-ui": "^15.0.15",
@@ -26,14 +26,16 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.13",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@workspace/eslint-config": "workspace:*",
-    "@workspace/typescript-config": "workspace:*",
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@workspace/eslint-config": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.22.0",
     "typescript": "5.8.2"
   }
