--- a/workspace/ui/package.json
+++ b/workspace/ui/package.json
@@ -25,7 +25,9 @@
     "@foundations/shadcn": "workspace:*",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "glsl-canvas-js": "^0.2.9",
     "lucide-react": "^0.475.0",
+    "motion": "^12.5.0",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
