refactor(ui): update module imports and TypeScript configuration
- Update import paths to use absolute imports with @workspace/ui prefix
- Add module type declaration in package.json
- Configure TypeScript paths and module resolution settings
- Add types.d.ts for SVG imports and Next.js type references
- Add separate tsconfig.lint.json for linting
- Remove unused imports and features array in hero component

--- a/workspace/ui/tsconfig.json
+++ b/workspace/ui/tsconfig.json
@@ -1,10 +1,32 @@
 {
   "extends": "@workspace/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "baseUrl": ".",
+    "paths": {
+      "@workspace/ui/*": [
+        "./src/*"
+      ],
+      "@workspace/ui/stripe/*": [
+        "./src/stripe/*"
+      ]
+    },
+    "types": [
+      "next"
+    ],
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   },
   "include": [
-    "src"
+    ".",
+    "types.d.ts"
   ],
   "exclude": [
     "node_modules",
