--- a/workspace/ui/package.json
+++ b/workspace/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@workspace/ui",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "exports": {
     "./*": "./src/*.tsx"
   },
