--- a/apps/oss-dynamic/package.json
+++ b/apps/oss-dynamic/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/postcss": "^4.0.13",
     "@types/mdx": "^2.0.13",
     "@workspace/ui": "workspace:*",
+    "better-auth": "^1.2.4",
     "fumadocs-core": "^15.0.15",
     "fumadocs-mdx": "^11.5.6",
     "fumadocs-ui": "^15.0.15",
