--- a/workspace/content/package.json
+++ b/workspace/content/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.9",
-    "@types/react": "19.0.10",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "19.0.4",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
