--- a/foundations/shadcn/package.json
+++ b/foundations/shadcn/package.json
@@ -42,6 +42,7 @@
     "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.483.0",
+    "motion": "^12.5.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
