--- a/foundations/cms/package.json
+++ b/foundations/cms/package.json
@@ -9,7 +9,9 @@
     "./search-dynamic": "./src/search-dynamic.ts",
     "./search-static": "./src/search-static.ts",
     "./docs/page": "./src/docs/page.tsx",
-    "./docs/layout": "./src/docs/layout.tsx"
+    "./docs/layout": "./src/docs/layout.tsx",
+    "./blog/list": "./src/blog/list.tsx",
+    "./blog/single": "./src/blog/single.tsx"
   },
   "scripts": {
     "clean": "rm -rf node_modules",
@@ -35,6 +37,7 @@
     "fumadocs-ui": "^15.1.1",
     "next": "^15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   }
 }
