--- a/workspace/auth/package.json
+++ b/workspace/auth/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "19.0.4",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "eslint": "^9.22.0",
     "typescript": "5.8.2"
   },
