--- a/apps/oss-dynamic/package.json
+++ b/apps/oss-dynamic/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.1.2",
     "sonner": "^2.0.1",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4",
@@ -42,7 +43,7 @@
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.12",
     "@types/react-dom": "19.0.4",
-    "@workspace/auth": "workspace:*",
+    "@foundations/better-auth-ui": "workspace:*",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.22.0",
