--- a/foundations/better-auth-ui/package.json
+++ b/foundations/better-auth-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@workspace/auth",
+  "name": "@foundations/better-auth-ui",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -30,11 +30,14 @@
     "@foundations/shadcn": "workspace:*",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "better-auth": "^1.2.4",
     "glsl-canvas-js": "^0.2.9",
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
+    "ua-parser-js": "^2.0.3"
   }
 }
