--- a/foundations/better-auth-ui/tsconfig.json
+++ b/foundations/better-auth-ui/tsconfig.json
@@ -3,16 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@workspace/ui/*": [
-        "./src/*"
-      ],
-      "@workspace/ui/stripe/*": [
-        "./src/stripe/*"
-      ]
+      "@foundations/better-auth-ui/*": ["./src/*"]
     },
-    "types": [
-      "next"
-    ],
+    "types": ["next"],
     "jsx": "preserve",
     "plugins": [
       {
@@ -24,12 +17,6 @@
     "noEmit": true,
     "allowImportingTsExtensions": true
   },
-  "include": [
-    ".",
-    "types.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": [".", "types.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
