--- a/apps/oss-dynamic/package.json
+++ b/apps/oss-dynamic/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.483.0",
     "mysql2": "^3.14.0",
     "next": "^15.2.4",
+    "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -40,10 +41,10 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@foundations/better-auth-ui": "workspace:*",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.12",
     "@types/react-dom": "19.0.4",
-    "@foundations/better-auth-ui": "workspace:*",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "eslint": "^9.22.0",
