--- a/foundations/shadcn/package.json
+++ b/foundations/shadcn/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "all": "pnpm dlx shadcn@canary add --all"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
