--- a/apps/oss-static/package.json
+++ b/apps/oss-static/package.json
@@ -15,6 +15,7 @@
     "@foundations/cms": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4.0.15",
+    "@foundations/shadcn": "workspace:*",
     "@types/mdx": "^2.0.13",
     "@workspace/ui": "workspace:*",
     "fumadocs-core": "^15.1.2",
@@ -25,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
