--- a/apps/oss-static/package.json
+++ b/apps/oss-static/package.json
@@ -13,13 +13,14 @@
   },
   "dependencies": {
     "@foundations/cms": "workspace:*",
+    "@foundations/shadcn": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4.0.15",
-    "@foundations/shadcn": "workspace:*",
     "@types/mdx": "^2.0.13",
     "@workspace/ui": "workspace:*",
     "fumadocs-core": "^15.1.2",
     "fumadocs-mdx": "^11.5.7",
+    "fumadocs-twoslash": "^3.1.0",
     "fumadocs-ui": "^15.1.2",
     "next": "^15.2.4",
     "postcss": "^8.5.3",
@@ -27,7 +28,11 @@
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "rehype-katex": "7.0.1",
+    "remark-math": "6.0.0",
+    "shiki": "^3.2.1",
+    "@shikijs/transformers": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
