--- a/foundations/cms/package.json
+++ b/foundations/cms/package.json
@@ -32,15 +32,20 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@shikijs/transformers": "^3.2.1",
     "@types/mdx": "^2.0.13",
     "@workspace/ui": "workspace:*",
     "fumadocs-core": "^15.1.2",
     "fumadocs-mdx": "^11.5.7",
+    "fumadocs-twoslash": "^3.1.0",
     "fumadocs-ui": "^15.1.2",
     "lucide-react": "^0.483.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-katex": "7.0.1",
+    "remark-math": "6.0.0",
+    "shiki": "^3.2.1",
     "zod": "^3.24.2"
   }
 }
