--- a/foundations/cms/package.json
+++ b/foundations/cms/package.json
@@ -12,6 +12,7 @@
     "./docs/layout": "./src/docs/layout.tsx",
     "./blog/layout": "./src/blog/layout.tsx",
     "./blog/list": "./src/blog/list.tsx",
+    "./blog/list-pagination": "./src/blog/list-pagination.tsx",
     "./blog/page": "./src/blog/page.tsx"
   },
   "scripts": {
