--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,10 @@
     "start": {
       "cache": false,
       "persistent": true
+    },
+    "sitemap": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
