--- a/apps/oss-static/package.json
+++ b/apps/oss-static/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "@types/mdx": "^2.0.13",
     "@workspace/ui": "workspace:*",
+    "@workspace/config": "workspace:*",
     "fumadocs-core": "^15.1.2",
     "fumadocs-mdx": "^11.5.7",
     "fumadocs-twoslash": "^3.1.0",
