--- a/foundations/cms/package.json
+++ b/foundations/cms/package.json
@@ -37,6 +37,7 @@
     "@shikijs/transformers": "^3.2.1",
     "@types/mdx": "^2.0.13",
     "@workspace/ui": "workspace:*",
+    "@workspace/config": "workspace:*",
     "fumadocs-core": "^15.1.2",
     "fumadocs-mdx": "^11.5.7",
     "fumadocs-twoslash": "^3.1.0",
