--- a/apps/oss-static/package.json
+++ b/apps/oss-static/package.json
@@ -20,13 +20,14 @@
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4.0.17",
     "@types/mdx": "^2.0.13",
-    "@workspace/ui": "workspace:*",
     "@workspace/config": "workspace:*",
+    "@workspace/ui": "workspace:*",
     "fumadocs-core": "^15.1.2",
     "fumadocs-mdx": "^11.5.7",
     "fumadocs-twoslash": "^3.1.0",
     "fumadocs-ui": "^15.1.2",
     "next": "^15.2.4",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
