--- a/apps/oss-static/package.json
+++ b/apps/oss-static/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf node_modules",
     "dev": "next dev --turbopack --port 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "npx serve@latest out",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
     "sitemap": "next-sitemap --config next-sitemap.config.cjs",
