--- a/foundations/shadcn/package.json
+++ b/foundations/shadcn/package.json
@@ -8,6 +8,8 @@
     "all": "pnpm dlx shadcn@canary add --all"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -35,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -42,6 +45,8 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
+    "jotai": "^2.12.2",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.484.0",
     "motion": "^12.5.0",
     "next-themes": "^0.4.6",
@@ -60,6 +65,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.17",
     "@turbo/gen": "^2.4.2",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
